--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -10,7 +10,7 @@
         android:id="@+id/question_text_view"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:padding = "24dp" />
+        android:padding = "24dp"/>
 
     <LinearLayout
         android:layout_width = "wrap_content"
@@ -21,13 +21,80 @@
             android:id = "@+id/true_button"
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
-            android:text = "@string/true_button" />
+            android:text = "@string/true_button"
+            android:visibility="gone"/>
 
         <Button
             android:id = "@+id/false_button"
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
-            android:text = "@string/false_button" />
+            android:text = "@string/false_button"
+            android:visibility="gone"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id = "@+id/a_button"
+                android:visibility="gone"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/b_button"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id = "@+id/c_button"
+                android:visibility="gone"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/d_button"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/fr_answer"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/submit_button"
+            android:text="@string/submit_button"
+            android:visibility="gone"/>
+
     </LinearLayout>
 
     <LinearLayout
